# docs/swagger.json
@@ -15,7 +15,6 @@
     "paths": {
         "/login": {
             "post": {
-                "description": "用户登录获取令牌",
                 "consumes": [
                     "application/json"
                 ],
@@ -41,22 +40,19 @@
                     "200": {
                         "description": "登录成功，返回token",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-controller_LoginResponse"
                         }
                     },
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     },
                     "401": {
                         "description": "登录失败",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     }
                 }
@@ -198,7 +194,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "权限管理"
+                    "角色API权限管理"
                 ],
                 "summary": "添加权限",
                 "parameters": [
@@ -250,7 +246,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "权限管理"
+                    "角色API权限管理"
                 ],
                 "summary": "移除权限",
                 "parameters": [
@@ -291,7 +287,6 @@
         },
         "/register": {
             "post": {
-                "description": "注册新用户",
                 "consumes": [
                     "application/json"
                 ],
@@ -317,22 +312,19 @@
                     "200": {
                         "description": "注册成功",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-model_User"
                         }
                     },
                     "400": {
                         "description": "参数错误",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     },
                     "500": {
                         "description": "注册失败",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     }
                 }
@@ -353,7 +345,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "权限管理"
+                    "角色API权限管理"
                 ],
                 "summary": "获取角色权限",
                 "parameters": [
@@ -447,6 +439,37 @@
                 }
             }
         },
+        "/role/menu/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "获取指定角色的菜单",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Role"
+                ],
+                "summary": "获取角色的菜单",
+                "responses": {
+                    "200": {
+                        "description": "菜单列表",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/role/page": {
             "get": {
                 "description": "分页查询 Role",
@@ -465,6 +488,60 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/crud.RolePageResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/role/permission-menu": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "为角色添加菜单权限",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Role"
+                ],
+                "summary": "为角色添加菜单权限",
+                "parameters": [
+                    {
+                        "description": "菜单权限信息",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.PermissionMenuRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "添加成功",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "参数错误",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "添加菜单权限失败",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     }
                 }
@@ -601,22 +678,19 @@
                     "200": {
                         "description": "用户信息",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-model_User"
                         }
                     },
                     "401": {
                         "description": "未认证",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     },
                     "500": {
                         "description": "获取用户信息失败",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     }
                 }
@@ -659,7 +733,7 @@
                     "200": {
                         "description": "用户分页",
                         "schema": {
-                            "$ref": "#/definitions/model.PageResult-model_User"
+                            "$ref": "#/definitions/controller.Response-model_PageResult-model_User"
                         }
                     }
                 }
@@ -698,29 +772,7 @@
                     "200": {
                         "description": "修改成功",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "参数错误",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "401": {
-                        "description": "未认证",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "修改密码失败",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     }
                 }
@@ -758,7 +810,7 @@
                     "200": {
                         "description": "更新用户",
                         "schema": {
-                            "$ref": "#/definitions/model.PageResult-model_User"
+                            "$ref": "#/definitions/controller.Response-model_UserReq"
                         }
                     }
                 }
@@ -804,22 +856,7 @@
                     "200": {
                         "description": "分配成功",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "参数错误",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "分配角色失败",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     }
                 }
@@ -863,22 +900,7 @@
                     "200": {
                         "description": "移除成功",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "参数错误",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "移除角色失败",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/controller.Response-any"
                         }
                     }
                 }
@@ -886,6 +908,17 @@
         }
     },
     "definitions": {
+        "controller.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                }
+            }
+        },
         "controller.PasswordRequest": {
             "type": "object",
             "required": [
@@ -899,6 +932,74 @@
                     "minLength": 6
                 },
                 "old_password": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Response-any": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Response-controller_LoginResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/controller.LoginResponse"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Response-model_PageResult-model_User": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/model.PageResult-model_User"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Response-model_User": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/model.User"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "controller.Response-model_UserReq": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "$ref": "#/definitions/model.UserReq"
+                },
+                "message": {
                     "type": "string"
                 }
             }
@@ -1212,6 +1313,24 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "service.PermissionMenuRequest": {
+            "type": "object",
+            "required": [
+                "menu_ids",
+                "role_id"
+            ],
+            "properties": {
+                "menu_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "role_id": {
+                    "type": "integer"
                 }
             }
         },
